@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: mem.c,v 1.116 2004/03/18 02:58:06 marka Exp $ */
+/* $Id: mem.c,v 1.116.18.1 2005/03/15 01:11:50 marka Exp $ */
 
 #include <config.h>
 
@@ -717,6 +717,15 @@ isc_mem_createx(size_t init_max_size, size_t target_size,
 	if (ctx == NULL)
 		return (ISC_R_NOMEMORY);
 
+	if (isc_mutex_init(&ctx->lock) != ISC_R_SUCCESS) {
+		UNEXPECTED_ERROR(__FILE__, __LINE__,
+				 "isc_mutex_init() %s",
+				 isc_msgcat_get(isc_msgcat, ISC_MSGSET_GENERAL,
+						ISC_MSG_FAILED, "failed"));
+		(memfree)(arg, ctx);
+		return (ISC_R_UNEXPECTED);
+	}
+
 	if (init_max_size == 0U)
 		ctx->max_size = DEF_MAX_SIZE;
 	else
@@ -775,15 +784,6 @@ isc_mem_createx(size_t init_max_size, size_t target_size,
 	ctx->highest = NULL;
 #endif /* ISC_MEM_USE_INTERNAL_MALLOC */
 
-	if (isc_mutex_init(&ctx->lock) != ISC_R_SUCCESS) {
-		UNEXPECTED_ERROR(__FILE__, __LINE__,
-				 "isc_mutex_init() %s",
-				 isc_msgcat_get(isc_msgcat, ISC_MSGSET_GENERAL,
-						ISC_MSG_FAILED, "failed"));
-		result = ISC_R_UNEXPECTED;
-		goto error;
-	}
-
 #if ISC_MEM_TRACKLINES
 	if ((isc_mem_debugging & ISC_MEM_DEBUGRECORD) != 0) {
 		unsigned int i;
@@ -805,17 +805,18 @@ isc_mem_createx(size_t init_max_size, size_t target_size,
 	return (ISC_R_SUCCESS);
 
   error:
-	if (ctx) {
-		if (ctx->stats)
+	if (ctx != NULL) {
+		if (ctx->stats != NULL)
 			(memfree)(arg, ctx->stats);
 #if ISC_MEM_USE_INTERNAL_MALLOC
-		if (ctx->freelists)
+		if (ctx->freelists != NULL)
 			(memfree)(arg, ctx->freelists);
 #endif /* ISC_MEM_USE_INTERNAL_MALLOC */
 #if ISC_MEM_TRACKLINES
-		if (ctx->debuglist)
+		if (ctx->debuglist != NULL)
 			(ctx->memfree)(ctx->arg, ctx->debuglist);
 #endif /* ISC_MEM_TRACKLINES */
+		DESTROYLOCK(&ctx->lock);
 		(memfree)(arg, ctx);
 	}
 
